# RAG-FiT

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  collect_data.py  evaluation.py  evaluation.sh  index.html  inference.py  inference.sh  mkdocs.yml  objects.inv  processing.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  training.py
.github/workflows/: docs.yml
configs/: evaluation.yaml  inference-vllm.yaml  inference.yaml  processing-nq.yaml  processing.yaml  training.yaml
configs/cot/: evaluation-asqa-format.yaml  evaluation-asqa.yaml  evaluation-hotpotqa-format.yaml  evaluation-hotpotqa.yaml  evaluation-triviaqa-format.yaml  evaluation-triviaqa.yaml  inference-asqa-baseline-gpt.yaml  inference-asqa-baseline-no-rag-gpt.yaml  inference-asqa-baseline-no-rag.yaml  inference-asqa-baseline.yaml  inference-asqa-cot-gpt.yaml  inference-asqa-cot-rag-gpt.yaml  inference-asqa-cot-rag.yaml  inference-asqa-cot.yaml  inference-asqa-rar-gpt.yaml  inference-asqa-rar-rag-gpt.yaml  inference-asqa-rar-rag.yaml  inference-asqa-rar.yaml  inference-asqa-rarN-gpt.yaml  inference-asqa-rarN-rag-gpt.yaml  inference-asqa-rarN-rag.yaml  inference-asqa-rarN.yaml  inference-hotpotqa-baseline-gpt.yaml  inference-hotpotqa-baseline-no-rag-gpt.yaml  inference-hotpotqa-baseline-no-rag.yaml  inference-hotpotqa-baseline.yaml  inference-hotpotqa-cot-gpt.yaml  inference-hotpotqa-cot-rag-gpt.yaml  inference-hotpotqa-cot-rag.yaml  inference-hotpotqa-cot.yaml  inference-hotpotqa-rar-gpt.yaml  inference-hotpotqa-rar-rag-gpt.yaml  inference-hotpotqa-rar-rag.yaml  inference-hotpotqa-rar.yaml  inference-hotpotqa-rarN-gpt.yaml  inference-hotpotqa-rarN-rag-gpt.yaml  inference-hotpotqa-rarN-rag.yaml  inference-hotpotqa-rarN.yaml  inference-triviaqa-baseline-gpt.yaml  inference-triviaqa-baseline-no-rag-gpt.yaml  (+14 more)
configs/paper/: evaluation-asqa-long.yaml  evaluation-asqa-short.yaml  evaluation-pubmed.yaml  inference-asqa.yaml  inference-pubmed.yaml  processing-asqa-baseline.yaml  processing-asqa-context.yaml  processing-asqa-cot-dev.yaml  processing-asqa-cot-train.yaml  (+5 more)
docs/: README.md  evaluation.md  index.md  inference.md  processing.md  pubmed.md  requirements.txt  training.md
evaluation/: index.html
inference/: index.html
processing/: index.html
pubmed/: index.html
ragfit/: utils.py
ragfoundry/: utils.py
scripts/: generate_docstrings.py
search/: search_index.json
training/: index.html
(+123 files in other folders)
